[package]
name = "tb"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.5"
pest = "2.8.0"
pest_derive = "2.8.0"
ratatui = {version = "0.29.0", features = ["crossterm", "underline-color", "macros", "unstable-rendered-line-info"]}
strum = "0.27.1"
strum_macros = "0.27.1"
taffy = "0.8.3"
textwrap = "0.16.2"
thiserror = "2.0.12"
